test/e2e/chainsaw/gateway/tcproute-onprem/03-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: ($tcp_route_name)
  namespace: ($namespace)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
      sectionName: tcp
  rules:
    - backendRefs:
        - name: ($echo_deployment_name)
          port: ($tcp_echo_port)
