test/e2e/chainsaw/gateway/tcproute-onprem/03-assert-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: ($tcp_route_name)
  namespace: ($namespace)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
      sectionName: tcp
status:
  parents:
    - parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: ($gateway_name)
        sectionName: tcp
       # Filter conditions array to check for all required conditions
      (conditions[?type == 'Accepted']):
        - status: "True"
          reason: Accepted
      (conditions[?type == 'ResolvedRefs']):
        - status: "True"
          reason: ResolvedRefs
      (conditions[?type == 'Programmed']):
        - status: "True"
          reason: Programmed
