test/e2e/chainsaw/common/_step_templates/verify-tcp-traffic-from-host.yaml
# Template for verifying TLS traffic from the host to the gateway.
#
# Required bindings:
#   - gateway_name: Name of the Gateway.
#   - gateway_namespace: Namespace of the Gateway.
#   - listener_tcp_port: Port of the gateway listener for TCP traffic.
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: verify-tcp-traffic-from-host
spec:
  try:
    # 1. Dynamically discover the Gateway's Proxy IP
    - script:
        env:
          - name: GATEWAY_NAME
            value: ($gateway_name)
          - name: GATEWAY_NAMESPACE
            value: ($gateway_namespace)
        content: |
          bash ../../common/scripts/proxy_ip_address.sh
        outputs:
          - name: proxy_ip
            value: (json_parse($stdout).proxy_ip_address)
        check:
          (json_parse($stdout).proxy_ip_address != null): true
          (json_parse($stdout).proxy_ip_address != ''): true

    # 2. Perform the TCP connectivity check.
    - script:
        env:
          - name: PROXY_IP
            value: ($proxy_ip)
          - name: PROXY_PORT
            value: (to_string($listener_tcp_port))
        content: |
          PROTOCOL=tcp bash ../../common/scripts/host_connectivity_test_l4.sh
        check:
          (to_string(json_parse($stdout).success) == 'true'): true
